--- a/cat/.ssh/config
+++ b/cat/.ssh/config
@@ -2,4 +2,6 @@ Host up
     User zkhzgownfqer
     HostName 107.180.44.135
 
-IdentityFile ~/.ssh/id_rsa
+Host *
+    IdentityFile ~/.ssh/id_rsa
+    StrictHostkeyChecking no
